Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-03-10 (SVN):
    * pr_edict.c: if progs.dat exists, accept maplist.txt only if it is
      from the same game directory as progs.dat itself or if it is from
      a searchpath with a higher priority.

2013-03-10 (SVN):
    * [gl_|sv_]model.c: change the 'ignored' messages from external lit
      and ent files back to developer mode.

2013-03-10 (SVN):
    * update version date stamp to 2013-03-10.

2013-03-10 (SVN):
    * update the Mac OS X icon. add some more under engine/resource/.

2013-03-08 (SVN):
    * docs/README.hwsv, hw/mapcycle.cfg: fix a typo in sample rotation.
    * hw/client.hc, dmlevels.hc: properly simplify map cycling stuff.
    * siege/client.hc, dmlevels.hc: minor map cycling stuff, and add
      some FIXME notes.

2013-03-08 (SVN):
    * hw/client.hc (NextLevel): set SFL_NEW_UNIT unconditionally because
      we may not have to call FindDMLevel().

2013-03-08 (SVN):
    * gamecode: increment version to 1.28. revert Kor Skarn's method of
      abusing strings.txt for map cycling: it was intrusive and unsafe
      and ugly. the hw and siege hcode now use the standart quakeworld
      method of localinfo variables: see client.hc:NextLevel().
    * docs/README.hwsv: update for brief user instructions on setting up
      a map cycling.

2013-03-08 (SVN):
    * increment engine versions for hexen2 to 1.28, hexenworld to 0.28.
    * update version date stamp to 2013-03-08.

2013-03-06 (SVN):
    * midi_osx.c: add code in GetSequenceLength() to support running on
      10.2, because the constant kSequenceTrackProperty_TrackLength (5)
      requires 10.3 runtime (code taken from an old post on mac mailing
      lists.) add a debug print for the resulting sequence length value.
      change malloc() to Z_Malloc() for our private CoreMidiSong struct.
    * update version date stamp to 2013-03-06.

2013-03-06 (SVN):