@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2013-03-10 (SVN):
+    * gl_vidamiga.c: cleanups from Szilard Biro.
+
+2013-03-10 (SVN):
     * pr_edict.c: if progs.dat exists, accept maplist.txt only if it is
       from the same game directory as progs.dat itself or if it is from
       a searchpath with a higher priority.
